[tool.poetry]
name = "nowpayments-api"
version = "1.0.2"
description = "A Python wrapper for the NOWPayments API."
authors = ["Tomaž Mesarec <tomaz.mesarec@gmail.com>", "Arian Ventura Rodríguez <arianventura94@gmail.com>"]
readme = "README.md"
repository = "https://github.com/tomazmm/nowpayments-api-python"
license = "MIT"
packages = [
    {include = "nowpayments_api", from="src"}
]

[tool.poetry.dependencies]
python = "^3.9"
httpx = "^0.27.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.2.0"
python-dotenv = "^1.0.1"
anyio = "^4.4.0"
pytest-xdist = "^3.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["src"]
